--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,18 +1,39 @@
-name: NPM Publish
+name: Tag, Release, & Publish
+
 on:
   push:
     branches:
       - master
+
 jobs:
-  npm-publish:
-    name: npm-publish
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: publish
-        uses: pascalgn/npm-publish-action@1.3.6
+      - name: tag
+        id: autotagger
+        uses: butlerlogic/action-autotag@stable
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: release
+        id: create_release
+        if: steps.autotagger.outputs.tagcreated == 'yes'
+        uses: actions/create-release@v1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          tag_name: ${{ steps.autotagger.outputs.tagname }}
+          release_name: ${{ steps.autotagger.outputs.tagname }}
+          body: ${{ steps.autotagger.outputs.tagmessage }}
+          draft: false
+          prerelease: ${{ steps.autotagger.outputs.prerelease == 'yes' }}
+
+      - name: publish
+        id: publish
+        if: steps.autotagger.outputs.tagname != ''
+        uses: author/action-publish@stable
+        env:
+          REGISTRY_TOKEN: ${{ secrets.NPM_TOKEN }}
